tests/ui/lint/snapshots/manual_option_zip_fires.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `zip`
   ╭─[test.lis:5:11]
 4 │   let b: Option<int> = Some(2)
 5 │   let _ = a.and_then(|x| b.map(|y| (x, y)))
   ·           ────────────────┬────────────────
   ·                           ╰── can be simpler
 6 │ }
   ╰────
  help: Replace `a.and_then(|x| b.map(|y| (x, y)))` with `a.zip(b)` · code: [lint.manual_option_zip]
