tests/ui/lint/snapshots/manual_replace_all.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `strings.ReplaceAll`
   ╭─[test.lis:6:11]
 5 │   let s = "hello world"
 6 │   let _ = strings.Replace(s, "o", "0", -1)
   ·           ────────────────┬───────────────
   ·                           ╰── can use `strings.ReplaceAll`
 7 │ }
   ╰────
  help: `strings.Replace(s, "o", "0", -1)` replaces every occurrence. Use `strings.ReplaceAll(s, "o", "0")` · code: [lint.manual_replace_all]
